<resources>
    <string name="app_name">TheGreatPiTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="vibratePi">Vibrate Pi</string>
    <string name="previous">Previous</string>
    <string name="defaultValue">Delay in Seconds</string>
    <string name="stopVibrate">Stop</string>
    <string name="changeDelay">Change Delay</string>
    <string name="halfWay">Halfway</string>
    <string name="vibeLength">Vibe Length</string>

    <string name="takeThatJenks">Take that, Dr. Jenkins</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="adjustTimer">Adjust Timer</string>
</resources>